<resources>
    <string name="app_name">Audio Pi</string>
    <string name="action_settings">Settings</string>

    <string name="main_fragment">This is Main Fragment</string>
    <string name="explore_fragment">This is Explore Fragment</string>
    <string name="media_fragment">This is Media Fragment</string>
    <string name="play_fragment">This is Play Fragment</string>
    <string name="title_activity_audio">AudioActivity</string>
    <string name="audio_activity">This is Audio Activity</string>
    <string name="ipsum">Wish you were here</string>
    <string name="sample_author">Pink Floyd</string>
    <string name="change_explore_view">View</string>
    <string name="refresh">Refresh</string>
    <string name="root">Root</string>
    <string name="sort">Sortowanie</string>
    <string name="volley_error">Wystąpił błąd podczas ładowania listy</string>
    <string name="no_internet_error">Brak połączenia z internetem.</string>
    <string name="dataset_empty_error">Brak wspieranych plików w tym katalogu.</string>
    <string name="server_error">Serwer niedostępny.\nSpróbuj później.</string>
    <string name="invalid_path_error">Podana ścieżka nie istnieje.</string>
    <string name="no_sorting">Brak</string>
    <string name="fromAtoZsorting">Alfabetycznie</string>
    <string name="fromZtoAsorting">Alfabetycznie od końca</string>
    <string name="fetching_from_cache">Can\'t connect to server. Fetching from cache.</string>
    <string name="delete">Delete</string>
    <string name="uploadFile">Upload files</string>

    <string name="download">Pobierz</string>
    <string name="addToPlaylist">Dodaj do playlisty</string>
    <string name="songDetalis">Metadane</string>
    <string name="setAsRingtone">Ustaw jako dzwonek</string>

    <string name="filesize_format">%1$s MB</string>
    <string name="playlist_count_format">%1$s utworów</string>
    <string name="artist_album_format">%1$s - %2$s</string>
    <string name="removed_snackbar_format">%1$s removed</string>
    <string name="volume_format">Volume(%1$s)</string>

    <string name="unknown"><![CDATA[<nieznany>]]></string>
    <string name="back">Back</string>
    <string name="song">Song:</string>
    <string name="artist">Twórca:</string>
    <string name="album">Album:</string>
    <string name="genre">Gatunek:</string>
    <string name="time">Długość:</string>
    <string name="size">Waga:</string>
    <string name="path">Ścieżka:</string>
    <string name="genreSimple">Gatunek</string>
    <string name="albumSimple">Płyta</string>
    <string name="artistSimple">Artysta</string>
    <string name="download_in_progress">Pobieranie</string>
    <string name="download_beg">Rozpoczęto pobieranie...</string>
    <string name="download_error">Wystąpił błąd podczas pobierania</string>
    <string name="file_downloaded">Pobieranie zakończone</string>
    <string name="no_playlists_error">No playlists in current directory.</string>
    <string name="unknown_simple">Unknown</string>
    <string name="zero_formatted_time">00:00</string>
    <string name="menu_playlist">Playlista</string>
    <string name="no_playlist">Brak obecnie odtwarzanej playlisty</string>
    <string name="to_playlist_repeat">Playlist cycle</string>
    <string name="to_playlist_track_repeat">Track cycle</string>
    <string name="to_playlist_shuffle">Shuffle</string>
    <string name="to_playlist_normal">Single cycle</string>
    <string name="to_track_repeat">Track repeat</string>
    <string name="to_track_normal">Track single</string>
    <string name="all">Wszystko</string>
    <string name="albums">Płyty</string>
    <string name="artists">Twórcy</string>
    <string name="genres">Gatunki</string>
    <string name="playlists">Playlisty</string>
    <string name="no_albums_error">No playlist for \'album\' filter.</string>
    <string name="no_artists_error">No playlist for \'artist\' filter.</string>
    <string name="no_genres_error">No playlist for \'genre\' filter.</string>
    <string name="add_playlist">Dodaj playlistę</string>
    <string name="add_new_playlist_dialog_title">Dodaj nową playlistę</string>
    <string name="input_playlist_name_hint">Nazwa playlisty</string>
    <string name="input_prefill" />
    <string name="new_playlist_dailog_content">Podaj nazwę nowej playlisty</string>
    <string name="choose">Wybierz</string>
    <string name="add_to_playlist_title">Dodaj do playlisty</string>
    <string name="removeFromPlaylist">Usuń z playlisty</string>
    <string name="unable_to_find_track">Unable to find track</string>
    <string name="title_activity_crash">Błąd</string>
    <string name="crash_message">An unexpected error occurred. \n Sorry for the inconvinience.</string>
    <string name="restart_app">Reset</string>
    <string name="title_activity_detalis">DetalisActivity</string>
    <string name="shuffle_on_wave_key">SHUFFLE_ON_WAVE</string>
    <string name="shuffle_on_wave_summary">While playling playlist you can shuffle your current track with accelerometer.</string>
    <string name="shuffle_on_wave_title">Accelerometer Shuffle</string>
    <string name="activity_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_local_playlist_error">No user-created playlists.</string>
    <string name="content_remove_playlist">Are you sure that you want to remove this playlist?</string>
    <string name="yes">Yes</string>
    <string name="disagree">No</string>
    <string name="playlist_empty">Playlist empty</string>
    <string name="snack_bar_action_undo">UNDO</string>
    <string name="connect">Connect</string>
    <string name="ip_hint">ip address</string>
    <string name="port_hint">port</string>
    <string name="volume_change_error">Volume change error</string>
    <string name="volume">Volume</string>
    <string name="no_while_loading">Not allowed while loading</string>
    <string name="gesture_navigation">GESTURE_NAVIGATION_KEY</string>
    <string name="gesture_navigation_summary">UP - Shuffle | DOWN - Restart current track | LEFT - Next track | RIGHT - Previous Track</string>
    <string name="gesture_navigation_title">Nawigacja gestami</string>
    <string name="create_new_folder">Create new folder</string>
    <string name="create_new_folder_content">Please, specify your folder name.</string>
    <string name="create_new_folder_hint">Name</string>
    <string name="folder_name_too_short">You didn\'t specified folder name.</string>
    <string name="new_folder_error">Unable to create new folder. An error has occured.</string>
    <string name="unable_to_perform_action">Unable to perform this action it current directory.</string>
    <string name="please_wait">Please Wait</string>
    <string name="creating_new_folder">Creating new folder...</string>
    <string name="deleting_your_data">Deleting your data...</string>
    <string name="deleting_error">An error has occured while deleting.</string>
    <string name="uploading">Uploading...</string>
    <string name="upload_error">While uploading, an error has occured.</string>
    <string name="finished_upload">Upload finished!</string>
    <string name="add">Add</string>


    <string name="lorem_ipsum"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce tempor metus at ipsum congue, vitae consectetur lectus dignissim. Suspendisse interdum hendrerit tempor. Vivamus quis interdum justo. Morbi aliquam rutrum efficitur. Sed rhoncus ex ex, eget commodo orci porttitor et. Nunc non pellentesque nisl, at laoreet nibh. Maecenas eu congue felis, sed pulvinar augue. Praesent interdum cursus risus et facilisis. Vestibulum elementum dolor tellus. Aenean fermentum venenatis nisl, vel volutpat enim semper et. Nullam erat neque, tempus sed risus eu, sagittis vulputate odio. In urna neque, finibus in sodales sed, faucibus eget lacus. Duis auctor tincidunt justo, et eleifend nisi ultricies sit amet. Donec venenatis augue eget est ullamcorper, vel aliquam ipsum efficitur. Curabitur ut nisl sed libero laoreet ultricies quis sed metus.

Nam ultrices vehicula nibh, at volutpat erat tincidunt quis. Aenean gravida enim in massa malesuada vestibulum. Donec luctus dignissim ex, ut egestas enim placerat mollis. Proin mollis vitae neque ut efficitur. Sed mi nisi, tristique vel diam vitae, vulputate dapibus tellus. Integer et tristique purus, lobortis blandit erat. Integer id tortor eu risus consectetur fringilla vitae ut risus. Nullam dignissim metus vitae lacus imperdiet, nec mattis urna tincidunt. Aliquam quis efficitur lectus. </string>
</resources>
