<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <TextView android:text="@string/song"
            android:layout_marginRight="@dimen/dialog_horizontal_margin"
            android:layout_marginEnd="@dimen/dialog_horizontal_margin"/>

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scrollbars="none">

            <TextView
                android:singleLine="true"
                android:id="@+id/songTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </HorizontalScrollView>

    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <TextView android:text="@string/album"
            android:layout_marginRight="@dimen/dialog_horizontal_margin"
            android:layout_marginEnd="@dimen/dialog_horizontal_margin"/>

        <TextView android:id="@+id/albumTv" />

    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <TextView android:text="@string/artist"
            android:layout_marginRight="@dimen/dialog_horizontal_margin"
            android:layout_marginEnd="@dimen/dialog_horizontal_margin"/>

        <TextView android:id="@+id/artistTv" />

    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <TextView android:text="@string/genre"
            android:layout_marginRight="@dimen/dialog_horizontal_margin"
            android:layout_marginEnd="@dimen/dialog_horizontal_margin"/>

        <TextView android:id="@+id/genreTv" />

    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <TextView android:text="@string/time"
            android:layout_marginRight="@dimen/dialog_horizontal_margin"
            android:layout_marginEnd="@dimen/dialog_horizontal_margin"/>

        <TextView android:id="@+id/timeTv" />

    </TableRow>


    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <TextView android:text="@string/size"
            android:layout_marginRight="@dimen/dialog_horizontal_margin"
            android:layout_marginEnd="@dimen/dialog_horizontal_margin"/>

        <TextView android:id="@+id/sizeTv" />

    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <TextView android:text="@string/path"
            android:layout_marginRight="@dimen/dialog_horizontal_margin"
            android:layout_marginEnd="@dimen/dialog_horizontal_margin"/>

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scrollbars="none">

            <TextView
                android:singleLine="true"
                android:id="@+id/pathTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </HorizontalScrollView>

    </TableRow>

</TableLayout>
