<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$PlaceholderFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100">

            <EditText
                android:id="@+id/ipEditText"
                android:layout_width="0dp"
                android:hint="@string/ip_hint"
                android:layout_height="wrap_content"
                android:layout_weight="80"
                android:imeOptions="actionNext"
                android:singleLine="true" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text=":" />

            <EditText
                android:id="@+id/portEditText"
                android:layout_width="0dp"
                android:hint="@string/port_hint"
                android:layout_height="wrap_content"
                android:layout_weight="19"
                android:imeOptions="actionGo"
                android:singleLine="true" />


        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/connectBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:text="@string/connect" />

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>
